--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -19,7 +19,7 @@
           <div class="col-xs-12 visible-xs-block header-divider"></div>
 
           <div class="col-md-6 col-md-offset-1 col-sm-8 col-xs-12">
-            <input type="search" class="form-control" placeholder="Search">
+            <input type="search" class="form-control" id="search" placeholder="Search">
           </div>
 
           <div class="col-md-1"></div>
